Fix for toasts
Fix for whitespace on toasts
Keeps animations
Auto closes content when dialog is closed to remove gap between surrounding toasts

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1172,8 +1172,8 @@ label[for='diagram-type-select'] {
   transition: transform var(--dialog-shift-duration) var(--open-close-duration);
 }
 /*moves the toast-wrapper up by the same height as the details */
-#toast-container dialog:has(details[open]) + .toast-wrapper {
-  transform: translateY(calc(-1lh - (calc(var(--dialog-height) * 4))));
+#toast-container dialog[open]:has(details[open]) + .toast-wrapper {
+  transform: translateY(calc(-1lh - var(--dialog-height) - var(--toast-detail-open-height, 0px)));
 }
 
 #toast-container .toast-content {
@@ -1226,6 +1226,8 @@ label[for='diagram-type-select'] {
 
 #toast-container details::details-content {
   block-size: 0;
+  overflow: hidden;
+  interpolate-size: allow-keywords;
   transition:
     block-size var(--dialog-shift-duration) var(--open-close-duration),
     content-visibility var(--dialog-shift-duration) var(--open-close-duration);
@@ -1233,7 +1235,7 @@ label[for='diagram-type-select'] {
 }
 
 #toast-container details[open]::details-content {
-  block-size: calc((var(--dialog-height) * 4) - 1lh);
+  block-size: auto;
 }
 
 #toast-container summary {
